--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mongoose": "^5.9.7",
     "node-sass-middleware": "0.11.0",
     "pug": "^2.0.4",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "ws": "^7.2.3"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
