--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "nodemon -r dotenv/config ./server.js",
+    "test": "npx mocha --exit -r dotenv/config tests/**/*.js dotenv_config_path=.env.test",
     "lint": "npx eslint ./",
     "lint-autofix": "npx eslint --fix ./"
   },
@@ -22,7 +23,10 @@
     "ws": "^7.2.3"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "eslint": "^6.8.0",
+    "mocha": "^7.1.1",
     "nodemon": "^2.0.2"
   }
 }
